# nexusdata

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/nexusdata/: __init__.py
src/nexusdata/asyncs/: context.py  decorators.py  repositories.py
src/nexusdata/asyncs/uow/: transactions.py
src/nexusdata/core/metadata/: typings.py
src/nexusdata/core/queries/: generators.py  specials.py
src/nexusdata/legacy/: contexts.py  decorators.py  repositories.py
src/nexusdata/legacy/uow/: transactions.py
src/nexusdata/orms/: repositories.py  services.py
src/nexusdata/security/: specials.py
src/nexusdata/utils/: abstractions.py  exceptions.py  singletons.py
src/nexusdata/utils/queries/: generator_impls.py  resolvers.py  sqls.py  utilities.py
test_project/: main.py
test_project/apis/: comment_api.py  post_api.py  sign_in_api.py  sign_up_api.py
test_project/configs/: database.py  dtos.py  handlers.py  injectables.py  security.py
test_project/models/: __init__.py  account.py  comment.py  post.py  role.py
test_project/repos/: account_repo.py  comment_repo.py  post_repo.py  role_repo.py
test_project/services/: comment_service.py  post_service.py  sign_in_service.py  sign_up_service.py
test_project/utils/: exception.py  jwts.py  singletons.py
tests/: conftest.py  test_async_repo.py  test_repos.py
tests/domain/: database.py  models.py  repos.py
tests/security/: test_security.py
